regresion de codigo
el color volvio a ser el anterior no era blanco si no megro :)

--- a/Clima.html
+++ b/Clima.html
@@ -67,7 +67,7 @@
         hgroup h1,
         h2 {
             text-align: center;
-            color: #000000;
+            color: #fefefe;
         }
     </style>
 </head>
